--- a/santander-product-recommendation.ipynb
+++ b/santander-product-recommendation.ipynb
@@ -3253,10 +3253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-07-28T07:03:22.774Z"
+     "end_time": "2020-07-28T11:30:37.458670Z",
+     "start_time": "2020-07-28T07:03:22.776048Z"
     }
    },
    "outputs": [
@@ -3573,7 +3574,175 @@
       "[292]\ttrain-mlogloss:1.40216\n",
       "[293]\ttrain-mlogloss:1.40199\n",
       "[294]\ttrain-mlogloss:1.40185\n",
-      "[295]\ttrain-mlogloss:1.40169\n"
+      "[295]\ttrain-mlogloss:1.40169\n",
+      "[296]\ttrain-mlogloss:1.40158\n",
+      "[297]\ttrain-mlogloss:1.40143\n",
+      "[298]\ttrain-mlogloss:1.40129\n",
+      "[299]\ttrain-mlogloss:1.40116\n",
+      "[300]\ttrain-mlogloss:1.40103\n",
+      "[301]\ttrain-mlogloss:1.40086\n",
+      "[302]\ttrain-mlogloss:1.40070\n",
+      "[303]\ttrain-mlogloss:1.40054\n",
+      "[304]\ttrain-mlogloss:1.40037\n",
+      "[305]\ttrain-mlogloss:1.40023\n",
+      "[306]\ttrain-mlogloss:1.40010\n",
+      "[307]\ttrain-mlogloss:1.39997\n",
+      "[308]\ttrain-mlogloss:1.39985\n",
+      "[309]\ttrain-mlogloss:1.39968\n",
+      "[310]\ttrain-mlogloss:1.39955\n",
+      "[311]\ttrain-mlogloss:1.39938\n",
+      "[312]\ttrain-mlogloss:1.39925\n",
+      "[313]\ttrain-mlogloss:1.39911\n",
+      "[314]\ttrain-mlogloss:1.39897\n",
+      "[315]\ttrain-mlogloss:1.39882\n",
+      "[316]\ttrain-mlogloss:1.39871\n",
+      "[317]\ttrain-mlogloss:1.39859\n",
+      "[318]\ttrain-mlogloss:1.39844\n",
+      "[319]\ttrain-mlogloss:1.39831\n",
+      "[320]\ttrain-mlogloss:1.39817\n",
+      "[321]\ttrain-mlogloss:1.39805\n",
+      "[322]\ttrain-mlogloss:1.39791\n",
+      "[323]\ttrain-mlogloss:1.39779\n",
+      "[324]\ttrain-mlogloss:1.39766\n",
+      "[325]\ttrain-mlogloss:1.39753\n",
+      "[326]\ttrain-mlogloss:1.39742\n",
+      "[327]\ttrain-mlogloss:1.39731\n",
+      "[328]\ttrain-mlogloss:1.39717\n",
+      "[329]\ttrain-mlogloss:1.39705\n",
+      "[330]\ttrain-mlogloss:1.39694\n",
+      "[331]\ttrain-mlogloss:1.39681\n",
+      "[332]\ttrain-mlogloss:1.39669\n",
+      "[333]\ttrain-mlogloss:1.39657\n",
+      "[334]\ttrain-mlogloss:1.39646\n",
+      "[335]\ttrain-mlogloss:1.39633\n",
+      "[336]\ttrain-mlogloss:1.39621\n",
+      "[337]\ttrain-mlogloss:1.39609\n",
+      "[338]\ttrain-mlogloss:1.39601\n",
+      "[339]\ttrain-mlogloss:1.39589\n",
+      "[340]\ttrain-mlogloss:1.39577\n",
+      "[341]\ttrain-mlogloss:1.39561\n",
+      "[342]\ttrain-mlogloss:1.39548\n",
+      "[343]\ttrain-mlogloss:1.39535\n",
+      "[344]\ttrain-mlogloss:1.39521\n",
+      "[345]\ttrain-mlogloss:1.39508\n",
+      "[346]\ttrain-mlogloss:1.39495\n",
+      "[347]\ttrain-mlogloss:1.39481\n",
+      "[348]\ttrain-mlogloss:1.39465\n",
+      "[349]\ttrain-mlogloss:1.39454\n",
+      "[350]\ttrain-mlogloss:1.39441\n",
+      "[351]\ttrain-mlogloss:1.39432\n",
+      "[352]\ttrain-mlogloss:1.39417\n",
+      "[353]\ttrain-mlogloss:1.39407\n",
+      "[354]\ttrain-mlogloss:1.39396\n",
+      "[355]\ttrain-mlogloss:1.39385\n",
+      "[356]\ttrain-mlogloss:1.39369\n",
+      "[357]\ttrain-mlogloss:1.39358\n",
+      "[358]\ttrain-mlogloss:1.39346\n",
+      "[359]\ttrain-mlogloss:1.39333\n",
+      "[360]\ttrain-mlogloss:1.39321\n",
+      "[361]\ttrain-mlogloss:1.39308\n",
+      "[362]\ttrain-mlogloss:1.39295\n",
+      "[363]\ttrain-mlogloss:1.39279\n",
+      "[364]\ttrain-mlogloss:1.39271\n",
+      "[365]\ttrain-mlogloss:1.39261\n",
+      "[366]\ttrain-mlogloss:1.39247\n",
+      "[367]\ttrain-mlogloss:1.39233\n",
+      "[368]\ttrain-mlogloss:1.39218\n",
+      "[369]\ttrain-mlogloss:1.39209\n",
+      "[370]\ttrain-mlogloss:1.39195\n",
+      "[371]\ttrain-mlogloss:1.39181\n",
+      "[372]\ttrain-mlogloss:1.39168\n",
+      "[373]\ttrain-mlogloss:1.39156\n",
+      "[374]\ttrain-mlogloss:1.39145\n",
+      "[375]\ttrain-mlogloss:1.39135\n",
+      "[376]\ttrain-mlogloss:1.39120\n",
+      "[377]\ttrain-mlogloss:1.39109\n",
+      "[378]\ttrain-mlogloss:1.39100\n",
+      "[379]\ttrain-mlogloss:1.39088\n",
+      "[380]\ttrain-mlogloss:1.39077\n",
+      "[381]\ttrain-mlogloss:1.39066\n",
+      "[382]\ttrain-mlogloss:1.39056\n",
+      "[383]\ttrain-mlogloss:1.39044\n",
+      "[384]\ttrain-mlogloss:1.39034\n",
+      "[385]\ttrain-mlogloss:1.39024\n",
+      "[386]\ttrain-mlogloss:1.39010\n",
+      "[387]\ttrain-mlogloss:1.38996\n",
+      "[388]\ttrain-mlogloss:1.38985\n",
+      "[389]\ttrain-mlogloss:1.38972\n",
+      "[390]\ttrain-mlogloss:1.38958\n",
+      "[391]\ttrain-mlogloss:1.38945\n",
+      "[392]\ttrain-mlogloss:1.38932\n",
+      "[393]\ttrain-mlogloss:1.38920\n",
+      "Feature importance:\n",
+      "('renta', 75957)\n",
+      "('antiguedad', 71801)\n",
+      "('age', 70767)\n",
+      "('fecha_alta_month', 42117)\n",
+      "('nomprov', 40978)\n",
+      "('fecha_alta_year', 37036)\n",
+      "('canal_entrada', 34111)\n",
+      "('antiguedad_prev', 29611)\n",
+      "('age_prev', 26472)\n",
+      "('renta_prev', 22132)\n",
+      "('nomprov_prev', 12943)\n",
+      "('sexo', 11261)\n",
+      "('segmento', 10605)\n",
+      "('canal_entrada_prev', 10461)\n",
+      "('fecha_alta_month_prev', 10110)\n",
+      "('fecha_alta_year_prev', 7598)\n",
+      "('ind_recibo_ult1_prev', 7067)\n",
+      "('ind_cco_fin_ult1_prev', 6914)\n",
+      "('tiprel_1mes', 6714)\n",
+      "('ind_cno_fin_ult1_prev', 5905)\n",
+      "('ind_ecue_fin_ult1_prev', 5795)\n",
+      "('ind_actividad_cliente', 5773)\n",
+      "('ind_tjcr_fin_ult1_prev', 4218)\n",
+      "('ind_reca_fin_ult1_prev', 3931)\n",
+      "('ind_dela_fin_ult1_prev', 3817)\n",
+      "('segmento_prev', 3817)\n",
+      "('ind_nom_pens_ult1_prev', 3779)\n",
+      "('indext', 3388)\n",
+      "('ind_ctop_fin_ult1_prev', 3288)\n",
+      "('ind_nomina_ult1_prev', 3046)\n",
+      "('pais_residencia', 3043)\n",
+      "('ind_valo_fin_ult1_prev', 2646)\n",
+      "('ind_ctpp_fin_ult1_prev', 2560)\n",
+      "('sexo_prev', 2396)\n",
+      "('ind_fond_fin_ult1_prev', 2142)\n",
+      "('ind_actividad_cliente_prev', 1977)\n",
+      "('ind_empleado', 1850)\n",
+      "('ind_nuevo', 1786)\n",
+      "('tiprel_1mes_prev', 1728)\n",
+      "('ind_ctma_fin_ult1_prev', 1671)\n",
+      "('ind_plan_fin_ult1_prev', 1479)\n",
+      "('conyuemp_prev', 1239)\n",
+      "('ind_deco_fin_ult1_prev', 1111)\n",
+      "('ind_hip_fin_ult1_prev', 905)\n",
+      "('ind_nuevo_prev', 789)\n",
+      "('indext_prev', 758)\n",
+      "('indrel_1mes', 726)\n",
+      "('indfall', 707)\n",
+      "('ind_viv_fin_ult1_prev', 513)\n",
+      "('ind_empleado_prev', 505)\n",
+      "('indrel_1mes_prev', 500)\n",
+      "('pais_residencia_prev', 394)\n",
+      "('ind_deme_fin_ult1_prev', 383)\n",
+      "('ult_fec_cli_1t_month', 373)\n",
+      "('ind_pres_fin_ult1_prev', 330)\n",
+      "('indrel', 255)\n",
+      "('ind_cder_fin_ult1_prev', 229)\n",
+      "('indresi', 225)\n",
+      "('ind_ctju_fin_ult1_prev', 224)\n",
+      "('indrel_prev', 205)\n",
+      "('conyuemp', 171)\n",
+      "('indfall_prev', 100)\n",
+      "('ind_ahor_fin_ult1_prev', 80)\n",
+      "('ind_aval_fin_ult1_prev', 80)\n",
+      "('ult_fec_cli_1t_year', 63)\n",
+      "('ult_fec_cli_1t_month_prev', 53)\n",
+      "('indresi_prev', 20)\n",
+      "('ult_fec_cli_1t_year_prev', 17)\n",
+      "('tipodom', 3)\n"
      ]
     }
    ],
